增加重置sessionToken,简化SaveModule,适配Java 8