@@ -1,27 +1,29 @@
 import given.phigros.PhigrosUser;
 import io.netty.bootstrap.ServerBootstrap;
 import io.netty.channel.ChannelInitializer;
+import io.netty.channel.ChannelPipeline;
 import io.netty.channel.nio.NioEventLoopGroup;
 import io.netty.channel.socket.SocketChannel;
 import io.netty.channel.socket.nio.NioServerSocketChannel;
 import io.netty.handler.codec.http.HttpServerCodec;
 
+import java.io.BufferedReader;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class PhigrosServer {
     public static void main(String[] args) throws Exception {
-        try (final var reader = Files.newBufferedReader(Path.of("difficulty.csv"))) {
+        try (final BufferedReader reader = Files.newBufferedReader(Paths.get("difficulty.csv"))) {
             PhigrosUser.readInfo(reader);
         }
 
-        var server = new ServerBootstrap();
+        ServerBootstrap server = new ServerBootstrap();
         server.channel(NioServerSocketChannel.class);
         server.group(new NioEventLoopGroup(1), new NioEventLoopGroup());
         server.childHandler(new ChannelInitializer<SocketChannel>() {
             @Override
             protected void initChannel(SocketChannel ch) {
-                var pipeline = ch.pipeline();
+                ChannelPipeline pipeline = ch.pipeline();
                 pipeline.addLast(new HttpServerCodec());
                 pipeline.addLast(new Handler());
             }
